@@ -1,3 +1,7 @@
+2006-03-30 Karsten Behrmann <BearPerson@sourcemage.org>
+	* gen-scripts/{autoupdate.sh,nightlybuild.sh}: add scripts for
+	  automated unattended updates/builds
+
 2006-03-28 Karsten Behrmann <BearPerson@sourcemage.org>
 	* skeleton/etc/facilities/*: removed some unneeded files, added new
 	  stuff to facilities
